--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "body-parser": "^1.15.2",
+    "commander": "^2.10.0",
     "del": "~1.1.1",
     "express": "^4.14.0",
     "gulp": "~3.8.10",
@@ -17,6 +18,7 @@
     "morgan": "^1.7.0",
     "pg": "^6.1.5",
     "request": "^2.81.0",
-    "serve-static": "^1.11.1"
+    "serve-static": "^1.11.1",
+    "valid-url": "^1.0.9"
   }
 }
