--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "airlandseaweb",
+  "name": "rotonde",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
@@ -7,18 +7,11 @@
     "commander": "^2.10.0",
     "del": "~1.1.1",
     "express": "^4.14.0",
-    "gulp": "~3.8.10",
-    "gulp-autoprefixer": "^3.1.1",
-    "gulp-bundle-assets": "^2.27.1",
-    "gulp-jade": "~0.11.0",
-    "gulp-less": "*",
-    "gulp-minify-css": "~0.4.3",
-    "less-middleware": "^2.2.0",
     "method-override": "^2.3.7",
     "morgan": "^1.7.0",
+    "osenv": "^0.1.4",
     "pg": "^6.1.5",
     "request": "^2.81.0",
-    "serve-static": "^1.11.1",
-    "valid-url": "^1.0.9"
+    "serve-static": "^1.11.1"
   }
 }
